// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="default"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.code: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.code: true"
>
  <code>
    
  </code>
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: icon - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.copyable: icon"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <svg
      class="emotion-0"
      data-testid="AiOutlineExclamationCircle"
      id="properties.copyable: icon_copyable_icon"
    />
  </div>
</div>
`;

exports[`Render properties.copyable: icon: [] - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.copyable: icon: []"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <svg
      class="emotion-0"
      data-testid="AiOutlineExclamationCircle"
      id="properties.copyable: icon: []_copyable_before_icon"
    />
  </div>
</div>
`;

exports[`Render properties.copyable: text: one - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.copyable: text: one"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: tooltips: [] - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.copyable: tooltips: []"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-label="Click to copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.copyable: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.copyable: true"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.delete: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.delete: true"
>
  <del>
    
  </del>
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.disabled: true - value[0] 1`] = `
<div
  class="ant-typography ant-typography-disabled emotion-0"
  id="properties.disabled: true"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.editable.icon - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.editable.icon"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <svg
      class="emotion-0"
      data-testid="AiOutlineExclamationCircle"
      id="properties.editable.icon_editable_icon"
    />
  </div>
</div>
`;

exports[`Render properties.editable.maxLength: 10 - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.editable.maxLength: 10"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.editable.tooltip - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.editable.tooltip"
>
  
  <div
    aria-label="Change the value"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.editable: false - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.editable: false"
>
  
</div>
`;

exports[`Render properties.editable: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.editable: true"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.ellipsis: expandable, rows - value[0] 1`] = `
<div
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: expandable, rows"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.ellipsis: rows - value[0] 1`] = `
<div
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: rows"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.ellipsis: rows, suffix - value[0] 1`] = `
<div
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: rows, suffix"
>
  
  and other
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.ellipsis: true - value[0] 1`] = `
<div
  class="ant-typography ant-typography-ellipsis ant-typography-single-line emotion-0"
  id="properties.ellipsis: true"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.italic: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.italic: true"
>
  <i>
    
  </i>
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.mark: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.mark: true"
>
  <mark>
    
  </mark>
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.strong: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.strong: true"
>
  <strong>
    
  </strong>
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.type: danger - value[0] 1`] = `
<div
  class="ant-typography ant-typography-danger emotion-0"
  id="properties.type: danger"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.type: secondary - value[0] 1`] = `
<div
  class="ant-typography ant-typography-secondary emotion-0"
  id="properties.type: secondary"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.type: warning - value[0] 1`] = `
<div
  class="ant-typography ant-typography-warning emotion-0"
  id="properties.type: warning"
>
  
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Render properties.underline: true - value[0] 1`] = `
<div
  class="ant-typography emotion-0"
  id="properties.underline: true"
>
  <u>
    
  </u>
  <div
    aria-label="Edit"
    class="ant-typography-edit"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="edit"
      class="anticon anticon-edit"
      role="button"
    >
      <svg
        aria-hidden="true"
        data-icon="edit"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `false`;

exports[`Test Schema default 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.code: true 1`] = `false`;

exports[`Test Schema properties.code: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: icon 1`] = `false`;

exports[`Test Schema properties.copyable: icon 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: icon: [] 1`] = `false`;

exports[`Test Schema properties.copyable: icon: [] 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: text: one 1`] = `false`;

exports[`Test Schema properties.copyable: text: one 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: tooltips: [] 1`] = `false`;

exports[`Test Schema properties.copyable: tooltips: [] 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: true 1`] = `false`;

exports[`Test Schema properties.copyable: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.delete: true 1`] = `false`;

exports[`Test Schema properties.delete: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.disabled: true 1`] = `false`;

exports[`Test Schema properties.disabled: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.editable.icon 1`] = `false`;

exports[`Test Schema properties.editable.icon 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.editable.maxLength: 10 1`] = `false`;

exports[`Test Schema properties.editable.maxLength: 10 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.editable.tooltip 1`] = `false`;

exports[`Test Schema properties.editable.tooltip 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.editable: false 1`] = `false`;

exports[`Test Schema properties.editable: false 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.editable: true 1`] = `false`;

exports[`Test Schema properties.editable: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: expandable, rows 1`] = `false`;

exports[`Test Schema properties.ellipsis: expandable, rows 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: rows 1`] = `false`;

exports[`Test Schema properties.ellipsis: rows 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: rows, suffix 1`] = `false`;

exports[`Test Schema properties.ellipsis: rows, suffix 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: true 1`] = `false`;

exports[`Test Schema properties.ellipsis: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.italic: true 1`] = `false`;

exports[`Test Schema properties.italic: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.mark: true 1`] = `false`;

exports[`Test Schema properties.mark: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.strong: true 1`] = `false`;

exports[`Test Schema properties.strong: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: danger 1`] = `false`;

exports[`Test Schema properties.type: danger 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: secondary 1`] = `false`;

exports[`Test Schema properties.type: secondary 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: warning 1`] = `false`;

exports[`Test Schema properties.type: warning 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.underline: true 1`] = `false`;

exports[`Test Schema properties.underline: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "success",
        "default",
        "secondary",
        "warning",
        "danger",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;
